...
  @override
  Widget build(BuildContext context) {
    //card to list rotas
    return Scaffold(
      appBar: AppBar(
        title: const Text(
          "Rotas",
          style: TextStyle(
            fontSize: 20,
            fontWeight: FontWeight.bold,
            color: Colors.black,
          ),
        ),
...
            if (snapshot.connectionState == ConnectionState.done) {
              return ListView.builder(
                itemCount: snapshot.data!.length,
                itemBuilder: (context, index) {
                  return Card(
                    child: ListTile(
                      key: const Key('routeItemList'),
                      title: Text(snapshot.data![index].name),
                      subtitle: Text(
                        //tempo e id
                        "Data: ${snapshot.data![index].time} \nId: ${snapshot.data![index].id}",
                      ),
                      onTap: () {
...
