...
                                            _initialCameraPosition));
                              }
                            }
                          })
                        },
                    child: Text(
                        _isTracking! ? 'Stop tracking' : 'Start tracking'
                      )
                    ),
                if (_userLocation != null)
                  SizedBox(
                    key: Key('lista-de-cordenadas'),
                    width: 380,
...
