...
  @override
  Widget build(BuildContext context) {
    //card to list rotas
    return Scaffold(
      appBar: AppBar(
        title: const Text(
          "Locais da Rota",
          style: TextStyle(
            fontSize: 20,
            fontWeight: FontWeight.bold,
            color: Colors.black,
          ),
        ),
...
